<resources>
    <string name="app_name">Suitmedia Screening</string>
    <string name="next">Next</string>
    <string name="masukkan_nama">Masukkan nama</string>
    <string name="nama">Nama :</string>
    <string name="pilih_guest">Pilih Guest</string>
    <string name="pilih_event">Pilih Event</string>
    <string name="username">userName</string>
    <string name="abc_event">abc event</string>
    <string name="tanggal">15 Sept 2014</string>
    <string name="guest">Guest</string>
    <string name="home_description">Sertakan gambar profil Anda untuk melengkapi profil</string>
    <string name="Welcome">Selamat Datang!</string>
    <string name="image_event">Image Event</string>
    <string name="message_from_codi">Message From Codi</string>
    <string name="image_profile">Image Profile</string>
    <string name="image_back">Image Back</string>
    <string name="image_map">Image Map</string>
    <string name="image_search">Image Search</string>


    <string-array name="event_name">
        <item>Bali</item>
        <item>Malang</item>
        <item>Pantai</item>
        <item>Ulang Tahun</item>
    </string-array>

    <string-array name="event_tanggal">
        <item>15 Jun 2021</item>
        <item>16 Sep 2021</item>
        <item>22 Des 2021</item>
        <item>13 Aug 2021</item>
    </string-array>

    <integer-array name="event_photo">
        <item>@drawable/bali</item>
        <item>@drawable/malang</item>
        <item>@drawable/pantai</item>
        <item>@drawable/birthday</item>
    </integer-array>
</resources>