<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/nama"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/username"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_nama"
        app:layout_constraintTop_toTopOf="@+id/tv_nama" />

    <Button
        android:id="@+id/btn_pilih_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/pilih_event"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintStart_toStartOf="@+id/tv_nama"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <Button
        android:id="@+id/btn_pilih_guest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pilih_guest"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_pilih_event"
        app:layout_constraintStart_toStartOf="@+id/btn_pilih_event"
        app:layout_constraintTop_toBottomOf="@+id/btn_pilih_event" />

</androidx.constraintlayout.widget.ConstraintLayout>